--- a/src/App.css
+++ b/src/App.css
@@ -59,13 +59,44 @@
 }
 
 table {
-  margin: 0 auto;
+  margin: 20px;
+  table-layout:fixed;
 }
 
+.table-wrapper {
+  width: 100%;
+  overflow: scroll;
+}
+
+thead {
+  background-color: darkblue;
+  color: #fff;
+  display: table;
+}
+
+tbody {
+  background-color: rgba(73, 73, 121, 0.603);
+  color: #fff;
+  display: inline-table;
+  border-top-style: solid;
+  border-width: 1px;
+  border-color: azure;
+}
+
+
 th, td {
-  padding-top: 10px;
-  padding-right: 40px;
+  padding-right: 30px;
+  padding-left: 30px;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  vertical-align: middle;
+  text-align: center;
+  width: 10% !important;
+}
+
+td {
+  border-width: 3px;
+  border-bottom-style: dashed;
+  border-color: rgba(167, 185, 221, 0.525);
 }
 
 input {
