--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,14 @@
   }
 }
 
-.BARRA {
+.NAV {
   background-color: #1A202C;
   color: #fff;
   height: 70px;
 }
 
-.NAVEGADOR {
+.Browser {
+  background-color: #1A202C;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -51,21 +52,76 @@
   max-width: 1200px;
   height: 100%;
   margin: 0 auto;
+  font-size: 20px;
 }
 
-.InfoPersonajes {
-  display: flex;
-  align-self: center;
+button {
+  width: 85px;
+  height: 30px;
+  background-color: rgba(51, 51, 163, 0.936);
+  color: #fff;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  border-radius: 2px;
+  border-style: groove;
+  margin-top: 10px;
+  margin-inline-start: 25px;
+  margin-inline-end: 20px;
+}
+
+button.standard:disabled {
+  background-color: rgba(77, 77, 163, 0.815);
+  color: darkgray;
+}
+
+.Prev {
+  float: inline-start;
+}
+
+.Next {
+  float: inline-end;
 }
 
 table {
-  margin: 0 auto;
+  margin: 35px;
+  margin-top: 50px;
+  table-layout:fixed;
 }
 
+.table-wrapper {
+  width: 100%;
+  overflow: scroll;
+}
+
+thead {
+  background-color: darkblue;
+  color: #fff;
+  display: table;
+}
+
+tbody {
+  background-color: rgba(73, 73, 121, 0.603);
+  color: #fff;
+  display: inline-table;
+  border-top-style: solid;
+  border-width: 1px;
+  border-color: azure;
+}
+
+
 th, td {
-  padding-top: 10px;
-  padding-right: 40px;
+  padding-right: 30px;
+  padding-left: 30px;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  vertical-align: middle;
+  text-align: center;
+  width: 10% !important;
+}
+
+td {
+  border-width: 3px;
+  border-bottom-style: dashed;
+  border-color: rgba(167, 185, 221, 0.525);
 }
 
 input {
